--- a/DailyExpenses/app/src/main/res/values/strings.xml
+++ b/DailyExpenses/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">Daily Expenses</string>
     <string name="action_settings">Settings</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_expense">Expenses</string>
 </resources>
