--- a/DailyExpenses/app/src/main/res/values/strings.xml
+++ b/DailyExpenses/app/src/main/res/values/strings.xml
@@ -3,4 +3,16 @@
     <string name="action_settings">Settings</string>
     <string name="title_dashboard">Dashboard</string>
     <string name="title_expense">Expenses</string>
+
+    <string name="expense_type">choose expense type</string>
+    <string-array name="expenses">
+       <item>choose expense type</item>
+       <item>shoping cost</item>
+       <item>house rent</item>
+       <item>electric bill</item>
+       <item>internet bill</item>
+       <item>transport</item>
+       <item>breakfast</item>
+
+    </string-array>
 </resources>
