add and show complete

--- a/DailyExpense/app/src/main/res/values/strings.xml
+++ b/DailyExpense/app/src/main/res/values/strings.xml
@@ -1,17 +1,17 @@
 <resources>
     <string name="app_name">DailyExpense</string>
+    <string name="expense_prompt">Select expense type</string>
     <string name="title_dashboard">Dashboard</string>
-    <string name="title_Expense">Expense</string>
+    <string name="title_expenses">Expenses</string>
 
-    <string name="expense_type">choose expense type</string>
-    <string-array name="expenses">
-        <item>choose expense type</item>
-        <item>shoping cost</item>
-        <item>house rent</item>
-        <item>electric bill</item>
-        <item>internet bill</item>
-        <item>transport</item>
-        <item>breakfast</item>
+    <string-array name="expense_types">
+
+        <item>Lunch</item>
+        <item>Transport</item>
+        <item>Shopping</item>
+        <item>Grocery</item>
+        <item>Bills and payments</item>
 
     </string-array>
+
 </resources>
